src/objects/Course_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Attend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course Booking</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Course Booking Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>